<resources>
    <string name="app_name">NagpEcommerce</string>
    <string name="nagp">Nagp</string>
    <string name="welcome_header_text">NAGP Ecommerce App</string>
    <string name="welcome_sub_header_text">Hope you really like the demo</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="category">Category</string>
    <string name="search">Search</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_categories">Categories</string>
    <string name="title_settings">Settings</string>
    <string name="title_me">Me</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
</resources>