<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.view.LoginScreen">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/login_bg"
        android:scaleType="center"
        android:importantForAccessibility="no"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:background="@color/white"
            android:padding="12dp"
            android:inputType="textEmailAddress"
            android:autofillHints="" />

        <EditText
            android:id="@+id/first_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:background="@color/white"
            android:padding="12dp"
            android:layout_marginTop="20dp"
            android:inputType="text"
            android:autofillHints="" />

        <EditText
            android:id="@+id/last_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:background="@color/white"
            android:padding="12dp"
            android:layout_marginTop="20dp"
            android:inputType="text"
            android:autofillHints="" />

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:background="@color/white"
            android:padding="12dp"
            android:layout_marginTop="20dp"
            android:inputType="textPassword"
            android:autofillHints="" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textColor="#dccc99"
            android:textSize="18sp"
            android:gravity="center"
            android:padding="12dp"
            android:backgroundTint="#060606"
            android:layout_marginTop="50dp"
            android:text="@string/register"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>